# kitty-frame-presenter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/kitty_frame_presenter/: __init__.py  presenter.py
tests/: test_presenter.py
