[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kitty-frame-presenter"
version = "0.1.0"
description = "Damage-aware RGB frame presentation through the Kitty graphics protocol"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "itsmygithubacct"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[tool.setuptools.packages.find]
where = ["src"]

